- fixed better clearer allergenList to frontend CU-b0u3pd